Fix lack of contrast in light coloured text

--- a/site.css
+++ b/site.css
@@ -82,7 +82,7 @@ figure.breakout {
 
 figcaption {
   border-top: 1px solid;
-  color: #777;
+  color: #666;
   font-size: 0.75rem;
   margin: 1.5rem 0;
   padding: 1rem 0 0;
